# Reverse-Engineering-Dark-Souls

./: .gitignore  .gitmodules  CMakeLists.txt  GenericTrainer.sln  README.md
DarkSoulsTrainer/: CMakeLists.txt
DarkSoulsTrainer/include/: GenericTrainer.h
DarkSoulsTrainer/include/Modifications/: InfiniteHealth.h
DarkSoulsTrainer/src/: CodeBuilder.cpp
DarkSoulsTrainer/src/Modifications/: InfiniteHealth.cpp
GenericTrainer/: GenericTrainer.vcxproj  GenericTrainer.vcxproj.filters
GenericTrainer/Debug/: vc143.idb
GenericTrainer/Debug/GenericTrainer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GenericTrainer.lastbuildstate  Masm.read.1u.tlog  Masm.write.1u.tlog
GenericTrainer/include/: CodeBuilder.h  ExternalValue.h  Utility.h
GenericTrainer/include/Modifications/: Modification.h
GenericTrainer/src/: GenericTrainer.cpp  Utility.cpp  main.cpp
GenericTrainer/x64/Debug/: GenericTrainer.exe.recipe  GenericTrainer.ilk  vc143.idb
GenericTrainer/x64/Debug/GenericTrainer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GenericTrainer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
